--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,22 @@
+aniso8601==8.1.0
 attrs==20.3.0
 click==7.1.2
 Flask==1.1.2
+-e git+https://github.com/loafyyy/flask_project_tutorial.git@d3794bbd3515a0c6006a59a2ed30da97a7e949d0#egg=flask_project_tutorial
+Flask-RESTful==0.3.8
 importlib-metadata==3.1.1
 iniconfig==1.1.1
 itsdangerous==1.1.0
 Jinja2==2.11.2
 MarkupSafe==1.1.1
+mock==4.0.2
 packaging==20.7
 pluggy==0.13.1
 py==1.9.0
 pyparsing==2.4.7
 pytest==6.1.2
+pytz==2020.4
+six==1.15.0
 toml==0.10.2
 Werkzeug==1.0.1
 WTForms==2.3.3
